log
Sat May  7 17:40:26 HSP 2022: 
 tests:  0|4
total_score: 0/70
5d06705
Sat May  7 17:41:18 HSP 2022: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:39:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    heap->capac = NULL;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
2c56325
Sat May  7 17:45:08 HSP 2022: 
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:39:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    heap->capac = NULL;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
6064151
Sat May  7 17:45:51 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ea20d60
Sat May  7 17:46:12 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:38:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    heap->size = NULL;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
118fd94
Sat May  7 17:46:24 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
186c62c
Sat May  7 17:46:44 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
92f436f
Sat May  7 17:48:18 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
606368d
Sat May  7 17:48:40 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
c4f4c55
Sat May  7 17:55:20 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9d40a70
Sat May  7 17:56:23 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0615342
Sat May  7 17:58:24 HSP 2022: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|3
total_score: 10/70
c4b05bd
Sat May  7 18:02:04 HSP 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:4: error: 'raiz' undeclared (first use in this function)
    raiz = pq->heapArray[0];
    ^~~~
heap.c:21:4: note: each undeclared identifier is reported only once for each function it appears in
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f259070
Sat May  7 18:09:41 HSP 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
2b2ddf9
Sat May  7 18:11:37 HSP 2022: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
3051e4f
Sat May  7 18:12:15 HSP 2022: 
 heap.c | 3 ---
 1 file changed, 3 deletions(-)
test.c: In function 'heap_top':
test.c:276:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
 }
 ^
test.c:12:6: error: unused variable 'msg' [-Werror=unused-variable]
 char msg[300];
      ^~~
test.c:292:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:276:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:6:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9006e88
